Bug 47795 - UI: ODP always shows "By 3rd level paragraph" in Effect Options - Text Animation, although levels work
Summary: UI: ODP always shows "By 3rd level paragraph" in Effect Options - Text Animat...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: BSA target:6.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-24 01:06 UTC by Edi Leslie
Modified: 2018-07-11 22:59 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
The presentation file (13.19 KB, application/vnd.oasis.opendocument.presentation)
2012-03-24 01:06 UTC, Edi Leslie
Details
added animation (13.24 KB, application/vnd.oasis.opendocument.presentation)
2012-06-18 05:14 UTC, sasha.libreoffice
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Edi Leslie 2012-03-24 01:06:01 UTC
Created attachment 58958 [details]
The presentation file

Problem description: 

Steps to reproduce:
1. Giving a multilevel bullet paragraphs, format the area using any color.
2. Choose Add Custom Animation>Fly in, right click on the animation list and choose Effect Options, click on the Text Animation tab, choose "By 1st level paragraph".
3. Right click again on the animation list and choose Effect Options,  click on the Text Animation tab, it will display "By 3rd level paragraph".

Current behavior:
Always display Group Text: "By 3rd level paragraphs" Effect Options, Text Animation tab although this is not the option that you chose before. 

Expected behavior:
It should display what the user has choosen.

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (X11; Linux i686; rv:7.0.1) Gecko/20100101 Firefox/7.0.1
Comment 1 sasha.libreoffice 2012-06-18 05:14:10 UTC
Created attachment 63175 [details]
added animation
Comment 2 sasha.libreoffice 2012-06-18 05:17:36 UTC
Thanks for bugreport
Sorry, can not reproduce bug in 3.3.4 and 3.5.4 on Fedora 64 bit
May be I done something wrong? I have attached presentation with animation for be possible to verify.
Comment 3 A (Andy) 2012-12-25 13:39:59 UTC
reproducible with LO 3.6.4.3. (Win7 Home, 64bit)

But this bug is really strange.

reproduced by the following steps:
1. Opened the attached odp File "Fruits"
2. Selected the bullet paragraph box with a mouse click on the text (bullets)
[the in bug report mentioned first step formatting with any color is not necessary and was skipped by me]
3. Went to CUSTOMS ANIMATION from the menu SLIDE SHOW
4. Went on the right to the tab CUSTOMS ANIMATION and pressed the button ADD
5. Chose FLY IN from the tab ENTRANCE
6. Then went to this paragraph animation in the MODIFY EFFECTS section at the bottom (here named as "Apple") and made a right mouse click on this and chose EFFECT OPTIONS from the corresponding context menu
7. Went to the tab TEXT ANIMATION and chose BY 1ST LEVEL PARAGRAPHS in the field GROUP TEXT and pressed ok

Then I started the presentation and it worked, but I checked again the entry from step 7 and the entry was lost and there was found by BY 3RD LEVEL PARAGRAPHS.  But if you check the presentation it works still with 1st paragraph.
Then I chose BY 2ND LEVEL PARAGRAPHS and tested again the presentation and it worked.  But then I checked again the entry from step 7 and the entry was lost too and there was found by BY 3RD LEVEL PARAGRAPHS. 
Afterwards, I chose BY 3RD LEVEL PARAGRAPHS and tested the presentation again and it does not work.

But then I found there another bug.  When you chose AUTOMATICALLY AFTER you are not able to enter the delay in seconds (like e.g. mentioned in the LO help).

Another strange behaviour is that if you choose AS ONE OBJECT then the customs animation gets lost absolutely and you have to enter everything again.
Comment 4 sasha.libreoffice 2012-12-26 09:09:16 UTC
Thanks for additional information.
Reproduced in 3.6.4 on RFR 17 64 bit
After step 5 of previous comment appears item "Apple" among custom animations.
it has sign + to left of it. When we open it, we will see results of step 6. Sub-animations change. But in properties of main animation item remains "By 3rd level paragraphs".

IMHO easiest way to fix this bug is adding empty item for drop-down list of option "Group text" and make it default.
Comment 5 A (Andy) 2014-10-18 19:42:59 UTC
Reproducible with LO 4.3.2.2 (Win 8.1)
Comment 6 QA Administrators 2015-12-20 16:07:59 UTC Comment hidden (obsolete)
Comment 7 QA Administrators 2017-01-03 19:46:46 UTC Comment hidden (obsolete)
Comment 8 Timur 2017-05-17 13:52:28 UTC
Looks like it started from OO, when this was in SLIDE SHOW -> CUSTOMS ANIMATION.
Same with 5.4+ that now opens with Format-Animation. ODP always shows "By 3rd level paragraph" in Effect Options - Text Animation, although levels work. So minor.
Comment 9 QA Administrators 2018-05-18 02:32:52 UTC Comment hidden (obsolete)
Comment 10 Commit Notification 2018-06-24 01:52:57 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5c5cced0fcdac73031e5c75ba8e5593be594890c

tdf#47795 set mnTextGrouping to last non WITH_PREVIOUS level.

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.