tdf#47795 set mnTextGrouping to last non WITH_PREVIOUS level.

Change-Id: I8ca3b421dbfa83c19234f5cbde0a2ae340d3d268
Reviewed-on: https://gerrit.libreoffice.org/55979
Tested-by: Jenkins
Reviewed-by: Mark Hung <marklh9@gmail.com>